Mise en place de tout les element graphique/statique de la messagerie

--- a/WebContent/html/messagerie.html
+++ b/WebContent/html/messagerie.html
@@ -1,10 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
+
+<!-- Import des fichier externe a la page HTML -->
+<link rel="stylesheet" href="../css/messagerie.css" />
+<script type="text/javascript" src="../JavaScript/messagerie.js" ></script>
+
+<title>Messagerie - CDI Entreprise</title>
+
 </head>
+
+<!-- Body -->
 <body>
+
+<!-- TODO Inserée Menu nav -->
+
+<div id=""></div>
+
+<!-- Case de recherche -->
+
+<div id="recherche">
+
+</div>
+
+<!-- Menu messagerie top -->
+
+<div id="topMenu">
+	<menu>
+		<nav>
+			<ul>
+				<li><a href="#" onclick="">Nouveau message</a></li>
+				<li><a href="#" onclick="">Répondre</a></li>
+				<li><a href="#" onclick="">Supprimer</a></li>
+				<li><a href="#" onclick="">Déplacé</a></li>
+				<li><a href="#" onclick="">Régle</a></li>
+			</ul>
+		</nav>
+	</menu>
+</div>
+
+<!-- Menu messagerie left -->
+
+<div id="leftMenu">
+	<menu>
+		<nav>
+			<ul>
+				<li><a href="#" onclick="">Boite de reception</a></li>
+				<li><a href="#" onclick="">Brouillon</a></li>
+				<li><a href="#" onclick="">Éléments envoyés</a></li>
+				<li><a href="#" onclick="">Éléments supprimer</a></li>
+				<li><a href="#" onclick="">Archive</a></li>
+			</ul>
+		</nav>
+	</menu>
+</div>
+
+<!-- Content messagerie -->
+
+<div id="content">
+	<table>
+  <tr>
+    <th>#id</th>
+    <th>Source</th>
+    <th>Objet</th>
+    <th>Date Reception</th>
+    <th>Piece jointe</th>
+  </tr>
+  <tr>
+    <td>Remplissage auto de l'id incrémenté</td>
+    <td>Remplissage auto de la source</td>
+    <td>Remplissage auto de l'objet</td>
+    <td>Remplissage auto de la date</td>
+    <td>Remplissage auto de la source</td>
+  </tr>
+</table>
+
+</div>
 
 </body>
 </html>
