Partie Messagerie: Creation complete du HTML statique. Creation du CSS positionnement des different element graphique et debut de style.

--- a/WebContent/html/messagerie.html
+++ b/WebContent/html/messagerie.html
@@ -68,11 +68,11 @@
     <th>Piece jointe</th>
   </tr>
   <tr>
-    <td>Remplissage auto de l'id incrémenté</td>
-    <td>Remplissage auto de la source</td>
-    <td>Remplissage auto de l'objet</td>
-    <td>Remplissage auto de la date</td>
-    <td>Remplissage auto de la source</td>
+    <td>1</td>
+    <td>la source</td>
+    <td>l'objet</td>
+    <td>01/01/1970</td>
+    <td>la piece jointe</td>
   </tr>
 </table>
 
