Css et HTML travailler

--- a/WebContent/html/messagerie.html
+++ b/WebContent/html/messagerie.html
@@ -61,18 +61,25 @@
 <div id="content">
 	<table>
   <tr>
-    <th>#id</th>
+    <th>#</th>
     <th>Source</th>
     <th>Objet</th>
     <th>Date Reception</th>
     <th>Piece jointe</th>
   </tr>
   <tr>
-    <td>1</td>
+    <td><input type="checkbox"></input><td>
     <td>la source</td>
     <td>l'objet</td>
     <td>01/01/1970</td>
     <td>la piece jointe</td>
+  </tr>
+  <tr>
+    <td><input type="checkbox"></input><td>
+    <td>la source 2</td>
+    <td>l'objet 2</td>
+    <td>01/01/1970</td>
+    <td>la piece jointe 2</td>
   </tr>
 </table>
 
