--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
+
 <link rel="stylesheet" href="../css/menu.css" />
-<title>CDI - Entreprise</title>
-</head>
-<body>
 
 <ul>
   <li class="dropdown"><a href="#"> Profil</a>
@@ -39,9 +35,8 @@
       <a href="#">Vérifier les mises à jours</a>
       <a href="#">A propos</a>
     </div></li>
-  <li class="dropdown"><a href="#">Déconnexion</a></li>
+  <li class="dropdownLast"><a href="#">Déconnexion</a></li>
    
 </ul>
 
-</body>
 </html>
