Création page accueil, general.css et modification du menu et des servlets de la partie entreprise

--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -11,7 +11,7 @@
     </div></li>
   <li class="dropdown"><a href="#"> Entreprise</a>
   <div class="dropdown-content">
-      <a href="#">Créer une nouvelle fiche</a>
+      <a href="http://localhost:8085/ecf-16035-b/Company/Creation">Créer une nouvelle fiche</a>
       <a href="#">Modifier / Supprimer une fiche </a>
       <a href="#">Afficher et rechercher des fiches entreprises</a>
     </div></li>
