--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -1,40 +1,42 @@
-<!DOCTYPE html>
-<html>
-
 <link rel="stylesheet" href="../css/menu.css" />
-
+<nav id="mainMenu">
 <ul>
-  <li class="dropdown"><a href="#"> Profil</a>
-  <div class="dropdown-content">
-      <a href="#">Administrer les profils</a>
-      <a href="#">Liste des membres</a>
-    </div></li>
-  <li class="dropdown"><a href="#"> Entreprise</a>
-  <div class="dropdown-content">
-      <a href="#">Créer une nouvelle fiche</a>
-      <a href="#">Modifier / Supprimer une fiche </a>
-      <a href="#">Afficher et rechercher des fiches entreprises</a>
-    </div></li>
-  <li class="dropdown"> <a href="#">Recherche</a>
-  <div class="dropdown-content">
-      <a href="#">Rechercher une fiche enterprise</a>
-      <a href="#">Supprimer une recherche</a>
-    </div></li>
-  <li class="dropdown"> <a href="#">Favoris</a>
-  <div class="dropdown-content">
-      <a href="#">Mes Favoris</a>
-    </div></li>
-  <li class="dropdown"><a href="#"> Messagerie</a>
-  <div class="dropdown-content">
-      <a href="#">Gerer les messages</a>
-    </div></li>
-  <li class="dropdown"> <a href="#">Aide</a>
-  <div class="dropdown-content">
-      <a href="#">Documentation</a>
-      <a href="#">A propos</a>
-    </div></li>
-  <li class="dropdownLast"><a href="#">Déconnexion</a></li>
-   
+	<li class="current-menu-item"><a href="#">Accueil</a></li>
+	<li><a href="#">Profil</a>
+		<ul>
+		<li><a href="#">Administrer les profils</a></li>
+		<li><a href="#">Liste des membres</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Entreprise</a>
+		<ul>
+		<li><a href="#">Créer une nouvelle fiche entreprise</a></li>
+		<li><a href="#">Modifier / Supprimer une fiche </a></li>
+		<li><a href="#">Afficher et rechercher des fiches entreprises</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Recherche</a>
+		<ul>
+		<li><a href="#">Rechercher une fiche enterprise</a></li>
+		<li><a href="#">Supprimer une recherche</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Favoris</a>
+		<ul>
+		<li><a href="#">Mes Favoris</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Messagerie</a>
+		<ul>
+		<li><a href="#">Gere les messages</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Aide</a>
+		<ul>
+		<li><a href="#">Documentation</a></li>
+		<li><a href="#">A propos</a></li>
+		</ul>
+	</li>
+	<li class="last-menu-item"><a href="#">Déconnexion</a></li>
 </ul>
-
-</html>
+</nav>
