--- a/WebContent/WEB-INF/messagerie.html
+++ b/WebContent/WEB-INF/messagerie.html
@@ -1,33 +1,30 @@
-
-
 <!-- Import des fichier externe a la page HTML -->
 <link rel="stylesheet" href="../css/messagerie.css" />
-<script type="text/javascript" src="../JavaScript/messagerie.js" ></script>
 
 <!-- Case de recherche -->
 <div id="recherche">
-
+	<input type="search">
 </div>
 
 <!-- Menu messagerie top -->
-<div class="menuTop">
-	<ul class="menuTop">
-		<li class="menuItemTop"><a href="#" onclick="">Nouveau message</a></li>
-		<li class="menuItemTop"><a href="#" onclick="">R&eacute;pondre</a></li>
-		<li class="menuItemTop"><a href="#" onclick="">Supprimer</a></li>
-		<li class="menuItemTop"><a href="#" onclick="">D&eacute;plac&eacute;</a></li>
-		<li class="menuItemTop"><a href="#" onclick="">R&eacute;gle</a></li>
+<div id="menuMessagerieTop">
+	<ul>
+		<li><a href="#" onclick="">Nouveau message</a></li>
+		<li><a href="#" onclick="">R&eacute;pondre</a></li>
+		<li><a href="#" onclick="">Supprimer</a></li>
+		<li><a href="#" onclick="">D&eacute;plac&eacute;</a></li>
+		<li><a href="#" onclick="">R&eacute;gle</a></li>
 	</ul>
 </div>
 
 <!-- Menu messagerie left -->
-<div class="menuLeft">
-	<ul class="menuLeft">
-		<li class="menuItemLeft"><a href="#" onclick="">Boite de reception</a></li>
-		<li class="menuItemLeft"><a href="#" onclick="">Brouillon</a></li>
-		<li class="menuItemLeft"><a href="#" onclick="">&Eacute;l&eacute;ments envoy&eacute;s</a></li>
-		<li class="menuItemLeft"><a href="#" onclick="">&Eacute;l&eacute;ments supprimer</a></li>
-		<li class="menuItemLeft"><a href="#" onclick="">Archive</a></li>
+<div id="menuMessagerieLeft">
+	<ul>
+		<li><a href="#" onclick="">Boite de reception</a></li>
+		<li><a href="#" onclick="">Brouillon</a></li>
+		<li><a href="#" onclick="">&Eacute;l&eacute;ments envoy&eacute;s</a></li>
+		<li><a href="#" onclick="">&Eacute;l&eacute;ments supprimer</a></li>
+		<li><a href="#" onclick="">Archive</a></li>
 	</ul>
 </div>
 
