Modification messagerie ajout logo loupe reparation du menu

--- a/WebContent/WEB-INF/messagerie.html
+++ b/WebContent/WEB-INF/messagerie.html
@@ -3,7 +3,8 @@
 
 <!-- Case de recherche -->
 <div id="recherche">
-	<input type="search">
+	<img alt="Rrechercher" src="../ressource/img/loupe.png" onclick="changeVisibility(this)"/>
+	<input type="search" onblur="changeVisibility(this)" />
 </div>
 
 <!-- Menu messagerie top -->
