--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -1,7 +1,8 @@
 <link rel="stylesheet" href="../css/menu.css" />
+
 <nav id="mainMenu">
 <ul>
-	<li class="current-menu-item"><a href="#">Accueil</a></li>
+	<li class="current-menu-item"><a href="http://localhost:8085/ecf-16035-b/jsp/accueil.jsp">Accueil</a></li>
 	<li><a href="#">Profil</a>
 		<ul>
 		<li><a href="#">Administrer les profils</a></li>
@@ -10,7 +11,7 @@
 	</li>
 	<li><a href="#">Entreprise</a>
 		<ul>
-		<li><a href="#">Créer une nouvelle fiche entreprise</a></li>
+		<li><a href="http://localhost:8085/ecf-16035-b/Company/Creation">Créer une nouvelle fiche entreprise</a></li>
 		<li><a href="#">Modifier / Supprimer une fiche </a></li>
 		<li><a href="#">Afficher et rechercher des fiches entreprises</a></li>
 		</ul>
