Ajout lien dans le menu.

--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -29,7 +29,7 @@
 	</li>
 	<li><a href="#">Messagerie</a>
 		<ul>
-		<li><a href="#">Gere les messages</a></li>
+		<li><a href="messagerie.jsp">Gere les messages</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Aide</a>
