--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/menu.css" />
+<link rel="stylesheet" href="http://localhost:8085/ecf-16035-b/css/menu.css" />
 
 <nav id="mainMenu">
 <ul>
@@ -29,7 +29,7 @@
 	</li>
 	<li><a href="#">Messagerie</a>
 		<ul>
-		<li><a href="messagerie.jsp">Gere les messages</a></li>
+		<li><a href="../messagerie">Gere les messages</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Aide</a>
