--- a/WebContent/WEB-INF/messagerie.html
+++ b/WebContent/WEB-INF/messagerie.html
@@ -1,5 +1,6 @@
 <!-- Import des fichier externe a la page HTML -->
-<link rel="stylesheet" href="../css/messagerie.css" />
+<link rel="stylesheet" href="http://localhost:8085/ecf-16035-b/css/messagerie.css" />
+<script type="text/javascript" src="http://localhost:8085/ecf-16035-b/JavaScript/messagerie.js"></script>
 
 <!-- Case du Compte -->
 <div id="compte">
@@ -19,7 +20,7 @@
 
 <!-- Case de recherche -->
 <div id="recherche">
-	<img class="search-logo" alt="Rechercher" src="../ressource/img/loupe.png" onclick="changeFocus(this)"/>
+	<img class="search-logo" alt="Rechercher" src="http://localhost:8085/ecf-16035-b/ressource/img/loupe.png" onclick="changeFocus(this)"/>
 	<input class="search-bar" type="search" placeholder="Recherche" onkeypress="recherche()" />
 </div>
 		
@@ -33,15 +34,4 @@
 		<li><a href="#" onclick="">Archive</a></li>
 	</ul>
 </div>
-
-<!-- Content messagerie -->
-<div id="content">
-	<table>
-  <tr >
-    <th>#</th>
-    <th>Source</th>
-    <th>Objet</th>
-    <th>Date Reception</th>
-    <th>Piece jointe</th>
-  </tr>
  
