Mis à jour menu

--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -11,8 +11,8 @@
 	</li>
 	<li><a href="#">Entreprise</a>
 		<ul>
-		<li><a href="http://localhost:8085/ecf-16035-b/Company/Creation">Créer une nouvelle fiche entreprise</a></li>
-		<li><a href="#">Modifier / Supprimer une fiche </a></li>
+		<li><a href="../Company/Creation">Créer une nouvelle fiche entreprise</a></li>
+		<li><a href="../Company/ModifSuppr">Modifier / Supprimer une fiche </a></li>
 		<li><a href="#">Afficher et rechercher des fiches entreprises</a></li>
 		</ul>
 	</li>
