lien avec le menu et servlet rechControl
Servlet controlleur de la fonctionalité recherche renommée en
rechControl

--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -16,11 +16,7 @@
 		<li><a href="#">Afficher et rechercher des fiches entreprises</a></li>
 		</ul>
 	</li>
-	<li><a href="#">Recherche</a>
-		<ul>
-		<li><a href="#">Rechercher une fiche enterprise</a></li>
-		<li><a href="#">Supprimer une recherche</a></li>
-		</ul>
+	<li><a href="../Recherche/">Recherche</a>
 	</li>
 	<li><a href="#">Favoris</a>
 		<ul>
