Creation du dossier messagerie dans les different package/dossier du projet,
commencement de l'affichage d'un seul email,

--- a/WebContent/WEB-INF/messagerie.html
+++ b/WebContent/WEB-INF/messagerie.html
@@ -1,6 +1,6 @@
 <!-- Import des fichier externe a la page HTML -->
-<link rel="stylesheet" href="http://localhost:8085/ecf-16035-b/css/messagerie.css" />
-<script type="text/javascript" src="http://localhost:8085/ecf-16035-b/JavaScript/messagerie.js"></script>
+<link rel="stylesheet" href="../../css/messagerie/messagerie.css" />
+<script type="text/javascript" src="../../JavaScript/messagerie/messagerie.js"></script>
 
 <!-- Case du Compte -->
 <div id="compte">
