Affichage d'un mail terminer. Creation d'un nouveau message.

--- a/WebContent/WEB-INF/messagerie.html
+++ b/WebContent/WEB-INF/messagerie.html
@@ -1,6 +1,6 @@
 <!-- Import des fichier externe a la page HTML -->
-<link rel="stylesheet" href="../../css/messagerie/messagerie.css" />
-<script type="text/javascript" src="../../JavaScript/messagerie/messagerie.js"></script>
+<link rel="stylesheet" href="http://localhost:8085/ecf-16035-b/css/messagerie/messagerie.css" />
+<script type="text/javascript" src="http://localhost:8085/ecf-16035-b/JavaScript/messagerie/messagerie.js"></script>
 
 <!-- Case du Compte -->
 <div id="compte">
@@ -10,7 +10,7 @@
 <!-- Menu messagerie top -->
 <div id="menuMessagerieTop">
 	<ul>
-		<li><a href="#" onclick="">Nouveau message</a></li>
+		<li><a href="../messagerie/nouveau" onclick="">Nouveau message</a></li>
 		<li><a href="#" onclick="">R&eacute;pondre</a></li>
 		<li><a href="#" onclick="">Supprimer</a></li>
 		<li><a href="#" onclick="">D&eacute;plac&eacute;</a></li>
@@ -27,7 +27,7 @@
 <!-- Menu messagerie left -->
 <div id="menuMessagerieLeft">
 	<ul>
-		<li><a href="#" onclick="">Boite de reception</a></li>
+		<li><a href="../messagerie" onclick="">Boite de reception</a></li>
 		<li><a href="#" onclick="">Brouillon</a></li>
 		<li><a href="#" onclick="">&Eacute;l&eacute;ments envoy&eacute;s</a></li>
 		<li><a href="#" onclick="">&Eacute;l&eacute;ments supprimer</a></li>
