--- a/WebContent/WEB-INF/messagerie/messagerie.html
+++ b/WebContent/WEB-INF/messagerie/messagerie.html
@@ -10,7 +10,7 @@
 <!-- Menu messagerie top -->
 <div id="menuMessagerieTop">
 	<ul>
-		<li><a href="/nouveau" onclick="">Nouveau message</a></li>
+		<li><a href="/ecf-16035-b/messagerie/nouveau" onclick="">Nouveau message</a></li>
 		<li><a href="#" onclick="">R&eacute;pondre</a></li>
 		<li><a href="#" onclick="">Supprimer</a></li>
 		<li><a href="#" onclick="">D&eacute;plac&eacute;</a></li>
@@ -27,7 +27,7 @@
 <!-- Menu messagerie left -->
 <div id="menuMessagerieLeft">
 	<ul>
-		<li><a href="../ecf-16035-b/messagerie" onclick="">Boite de reception</a></li>
+		<li><a href="/ecf-16035-b/messagerie" onclick="">Boite de reception</a></li>
 		<li><a href="#" onclick="">Brouillon</a></li>
 		<li><a href="#" onclick="">&Eacute;l&eacute;ments envoy&eacute;s</a></li>
 		<li><a href="#" onclick="">&Eacute;l&eacute;ments supprimer</a></li>
