--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -23,9 +23,9 @@
 		<li><a href="#">Mes Favoris</a></li>
 		</ul>
 	</li>
-	<li><a href="#">Messagerie</a>
+	<li><a href="../../messagerie">Messagerie</a>
 		<ul>
-		<li><a href="../messagerie">Gere les messages</a></li>
+		<li><a href="../../ecf-16035-b/messagerie">Gere les messages</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Aide</a>
