--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -16,7 +16,7 @@
 		<li><a href="#">Afficher et rechercher des fiches entreprises</a></li>
 		</ul>
 	</li>
-	<li><a href="../Recherche/">Recherche</a>
+	<li><a href="../../../ecf-16035-b/Recherche/">Recherche</a>
 	</li>
 	<li><a href="#">Favoris</a>
 		<ul>
