Création de la classe Inscription Création de la classe ListeUtilisateurs Mise en place servlet tests

--- a/WebContent/html/Formulaire.html
+++ b/WebContent/html/Formulaire.html
@@ -12,15 +12,15 @@
 		<p><h4>Vous pouvez vous incrire en remplissant le formulaire ci-dessous</h4></p>
 	</div>
 	
-	<form action="Post">
+	<form method= "post" action="../inscription">
 		
 		<fieldset>
 	    	<legend><h3>Inscription</h3></legend>
 	    	
 	    	<div>
 		    	<p>Statut actuel <input type="radio"
-			    name="radio"> Stagiaire <input type="radio" name="radio"> Formateur <input
-			    type="radio" name="radio"> Ancien stagiaire</p>
+			    name="radio" value = "Stagiaire"> Stagiaire <input type="radio" name="radio" value = "Formateur"> Formateur <input
+			    type="radio" name="radio" value = "Anciens Stagiaires"> Ancien stagiaire</p>
 	    	</div>
 	    
 	    	<div>
