Nouveau message finit tester, Brouillon finit non tester,

--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -23,7 +23,7 @@
 		<li><a href="#">Mes Favoris</a></li>
 		</ul>
 	</li>
-	<li><a href="../../messagerie">Messagerie</a>
+	<li><a href="../../ecf-16035-b/messagerie">Messagerie</a>
 		<ul>
 		<li><a href="../../ecf-16035-b/messagerie">Gere les messages</a></li>
 		</ul>
