création d' une page InscriptionReussie.jsp et d' une page Recapitulatif.html pour renvoie d' une réponse à l' utilisateur

--- a/WebContent/html/Formulaire.html
+++ b/WebContent/html/Formulaire.html
@@ -20,7 +20,7 @@
 	    	<div>
 		    	<p>Statut actuel <input type="radio"
 			    name="radio" value = "Stagiaire"> Stagiaire <input type="radio" name="radio" value = "Formateur"> Formateur <input
-			    type="radio" name="radio" value = "Anciens Stagiaires"> Ancien stagiaire</p>
+			    type="radio" name="radio" value = "Ancien Stagiaire"> Ancien stagiaire</p>
 	    	</div>
 	    
 	    	<div>
