Changement de l'index / redirection sans controle a l'accueil.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,7 +26,7 @@
 
 <!-- Div Connexion -->
 	<div class="connexion">
-		<form name="conexion" action="" onsubmit="VerifAccount();">
+		<form name="conexion" action="/ecf-16035-b/accueil" onsubmit="return true">
 			<fieldset>
 			<legend>Se connecter</legend>
 			<br />
