modif javadoc package servlet.recherche
correction d'un bug requetesRecherche

--- a/src/fr/cdiEnterprise/servlet/recherche/Package.html
+++ b/src/fr/cdiEnterprise/servlet/recherche/Package.html
@@ -1,4 +1,11 @@
 <body>
 <p><b>Package fr.cdiEnterprise.servlet.recherche</b></p>
-<p>Ce package contient les servlets gérant la page de recherches d'entreprise</p>
+<p>Ce package contient toutes les Servlets qui gèrent les actions sur la page de recherches d'entreprise</p> 
+<p>Liste des Servlets:</p>
+<p><b>RechControl</b> : réoriente le flux vers les Servlets suivantes selon l'URL associée</p>
+<p><b>RechAffichageNew</b> : Gère l'affichage de la page</p>
+<p><b>RechListe</b> : Gère la génération d'une liste d'entrprises selon une recherche</p>
+<p><b>RechEnregistrer</b> : Gère l'enregistrement d'une recherche favorite</p>
+<p><b>RechFavAfficher</b> : Gère l'affichage d'une recherche favorite</p>
+<p><b>RechFavSuppr</b> : Gère la suppression d'une recherche favorite</p>
 </body>
