Ajout d'une fonctionnalité cacher.

--- a/WebContent/WEB-INF/messagerie/messagerie.html
+++ b/WebContent/WEB-INF/messagerie/messagerie.html
@@ -20,7 +20,8 @@
 <!-- Case de recherche -->
 <div id="recherche">
 	<img class="search-logo" alt="Rechercher" src="../../ecf-16035-b/ressource/img/loupe.png" onclick="changeFocus(this)"/>
-	<input class="search-bar" type="search" placeholder="Recherche" onkeypress="recherche()" />
+	<input class="search-bar" type="search" placeholder="Recherche" onkeyup="recherche(this)" />
+	<img class="game-logo" alt="game" src="../../ecf-16035-b/ressource/img/game.png" onclick="plusOuMoin()"/>
 </div>
 		
 <!-- Menu messagerie left -->
