--- a/WebContent/WEB-INF/menu.html
+++ b/WebContent/WEB-INF/menu.html
@@ -5,8 +5,9 @@
 	<li class="current-menu-item"><a href="http://localhost:8085/ecf-16035-b/jsp/accueil.jsp">Accueil</a></li>
 	<li><a href="#">Profil</a>
 		<ul>
-		<li><a href="#">Administrer les profils</a></li>
-		<li><a href="#">Liste des membres</a></li>
+		<li><a href="http://localhost:8085/ecf-16035-b/jsp/Inscription.jsp">Inscription</a></li>
+		<li><a href="http://localhost:8085/ecf-16035-b/jsp/Desinscription.jsp">Desinscription</a></li>
+		<li><a href="/ecf-16035-b//listeInscrits">Liste des inscrits</a></li>	
 		</ul>
 	</li>
 	<li><a href="#">Entreprise</a>
